# demo-ci-cd

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: agentic-mission.yml
.github/instructions/: code-review.instructions.md  python-src.instructions.md  python-tests.instructions.md
.github/skills/gherkin-es-authoring/: SKILL.md
.github/skills/pr-conventions/: SKILL.md
.github/skills/pydantic-v2-patterns/: SKILL.md
.github/skills/pytest-bdd-patterns/: SKILL.md
.github/skills/python-fastapi-standards/: SKILL.md
.github/skills/security-baseline/: SKILL.md
.github/skills/self-review/: SKILL.md
.github/workflows/: agentic-develop.yml  agentic-plan.yml  agentic-ready-for-review.yml  agentic-self-correct.yml  agentic-test.yml  ci.yml  dast.yml  functional-tests.yml  main-validation.yml  pr-validation.yml  preview.yml  sast.yml  sca.yml
src/: main.py  models.py  services.py
tests/: conftest.py
tests/features/: reserva.feature
tests/functional/: conftest.py  test_reserva_functional.py
tests/step_defs/: test_reserva_steps.py
